--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ background-size: cover;
   }
 
   .img-wrapper{
-      width: 300px;
+      width: 100%;
       height: 225px;
   }
   .b-example-divider {
