--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ background-size: cover;
 
   .img-wrapper{
       width: 100%;
-      height: 225px;
+      height: 250px;
   }
   .b-example-divider {
     height: 3rem;
@@ -92,4 +92,14 @@ background-size: cover;
     vertical-align: -.125em;
     fill: currentColor;
   }
+
+  .destyle-anchor{
+    text-decoration: none;
+    display: block;
+    color: #000000;
+  }
+
+  .destyle-anchor:hover { 
+      color: #000000; 
+    }
   
